# fastapi-users-intro

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: .env  .env.template  create_fastapi_app.py  main.py
src/alembic/versions/: 2025_11_16_1401-a079514c56a2_create_users_table.py  2025_11_24_1206-64e29e8ef83b_create_access_token_table.py  2025_11_24_1839-2cfbb9e51901_create_users_table.py  2025_11_24_1840-1d66eb588855_create_access_token_table.py
src/api/api_v1/: auth.py  messages.py  users.py
src/api/dependencies/authentication/: backend.py
src/core/: config.py
src/core/authentication/: transport.py  user_manager.py
src/core/models/: access_token.py  user.py
src/templates/: base.html  index.html
src/utils/: templates.py
