[project]
name = "fastapi-users-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi-cache2>=0.2.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.121.0",
    "jinja2>=3.1.6",
    "orjson>=3.11.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "redis>=7.1.0",
    "sqladmin[full]>=0.22.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
